--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
 **/android/gradle/wrapper
+**/android/android
 
 # iOS/XCode related
 **/ios/**/*.mode1v3
