--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_rating_bar: ^1.1.0
   gradient_app_bar: ^0.1.3
   splashscreen: ^1.2.0
+  carousel_slider: ^1.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
