--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,11 @@ flutter:
     - verduras.png
     - zanahorias.png
     - logo_plus.png
+    - logo_americanexpress.png
+    - logo_mastercard.png
+    - logo_oxxo.png
+    - logo_visa.png
+    
 
   fonts:
     - family: Montserrat
